@@ -7,6 +7,8 @@ Version 3.0.0 (rgerhards), 2007-12-??
   by imklog, a loadable input module. This offers a much better integration
   into rsyslogd and makes sure that the kernel logger process is brought
   up and down at the appropriate times
+- enhanced $IncludeConfig directive to support wildcard characters
+  (thanks to Michael Biebl)
 ---------------------------------------------------------------------------
 Version 1.20.2 (rgerhards), 2007-12-??
 ---------------------------------------------------------------------------
